fixed various alignment and responsiveness issues

--- a/hwbi/disc/css/mainstyle.css
+++ b/hwbi/disc/css/mainstyle.css
@@ -61,8 +61,7 @@ a {
 .searchtitle {
     color: rgba(0, 0, 0, 0.671);
     font-size: 22px;
-    margin-top: 50%;
-
+    /* margin-top: 50%; */
     font-family: sans-serif;
 }
 
@@ -139,6 +138,8 @@ h2.popup-title {
   .right {
     right: 0;
     background-color: white;
+    display: flex;
+    align-items: center;
   }
   
   /* If you want the content centered horizontally and vertically */
@@ -221,7 +222,7 @@ h2.popup-title {
   }
 
   .epalogo-home {
-      width: 20%;
+      width: 110px;
       position: absolute;
       top: -2%;
       left: 2%;
@@ -362,7 +363,7 @@ h2.popup-title {
   .main-content .content-wrapper {
       /* position: relative;
       left: 21%; */
-      padding-top: 8%;
+      padding-top: 90px;
       /* width: 80vw; */
       margin-left: 215px;
   }
@@ -537,7 +538,7 @@ h2.popup-title {
   margin: .5%;
   /* margin-bottom: 3%; */
   position: relative;
-  /* width: 250px; */
+  width: 100%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
